Implementing btree.